k8s/app-manifest/j26-bracelet-checker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-bracelet-checker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-bracelet-checker
  template:
    metadata:
      labels:
        app: j26-bracelet-checker
    spec:
      containers:
        - name: j26-bracelet-checker-app
          image: ghcr.io/scouterna/j26-bracelet-checker:latest
          ports:
            - containerPort: 3001
